--- a/BreakableEcology/Components/Header.razor.css
+++ b/BreakableEcology/Components/Header.razor.css
@@ -1,13 +1,14 @@
-﻿.header{
+﻿.header {
     padding: 3em 0;
     background-color: #fff;
     box-sizing: border-box;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.05), inset 0px -5px 15px rgba(255, 255, 255, 0.44);
 }
 
     .header ::deep .container {
         display: grid;
         grid-column-gap: 6em;
-        grid-row-gap: 4em;
+        grid-row-gap: 4.8em;
         align-items: center;
         grid-template-columns: auto 1fr auto auto;
         grid-template-rows: auto auto;
@@ -38,8 +39,8 @@
     grid-area: search;
 }
 
-@media only screen and (max-width: 48em){
-    .header {
+    @media only screen and (max-width: 48em) {
+        .header {
         padding: 1em 0;
         position: sticky;
     }
@@ -76,10 +77,11 @@
             top: -1000vh;
         }
 
-        .header.active {
-            height: 100vh;
-            overflow-y: auto;
-        }
+            .header.active {
+                height: 100vh;
+                overflow-y: auto;
+                width: 100vw;
+            }
 
             .header.active ::deep .container {
                 grid-template-areas:
