--- a/BreakableEcology/_Imports.razor
+++ b/BreakableEcology/_Imports.razor
@@ -11,3 +11,4 @@
 @using BreakableEcology.Components
 @using BreakableEcology.Shared.Enums
 @using BreakableEcology.Shared.Models
+@using BreakableEcology.Sections
