--- a/BreakableEcology/Components/Burger.razor
+++ b/BreakableEcology/Components/Burger.razor
@@ -1,4 +1,6 @@
-﻿<button class=@((Active) ? "burger active" : "burger")
+﻿@inject IJSRuntime js
+
+<button class=@((Active) ? "burger active" : "burger")
         @onclick="OnClick"
         type="button" aria-label="Меню">
     <span></span>
@@ -6,13 +8,31 @@
     <span></span>
 </button>
 
-@code{
-    public bool Active { get; set; } = false;
+@code {
+    private bool active = false;
+
+    public bool Active
+    {
+        get => active;
+        set
+        {
+            active = value;
+
+            if (active)
+            {
+                Task.Run(() => ScrollLock());
+            }
+            else
+            {
+                Task.Run(() => ScrollUnlock());
+            }
+        }
+    }
 
     [Parameter]
     public EventCallback OnClick { get; set; }
 
-    public async void ToggleBurger()
+    public void ToggleBurger()
     {
         Active = !Active;
     }
@@ -20,5 +40,15 @@
     public void Refresh()
     {
         StateHasChanged();
+    }
+
+    private async Task ScrollLock()
+    {
+        await js.InvokeVoidAsync("scrollLock");
+    }
+
+    private async Task ScrollUnlock()
+    {
+        await js.InvokeVoidAsync("scrollUnlock");
     }
 }
