--- a/BreakableEcology/Components/Card.razor.css
+++ b/BreakableEcology/Components/Card.razor.css
@@ -1,18 +1,117 @@
 ﻿.card {
     border-radius: 15px;
     box-shadow: -8px -8px 15px #FFFFFF, 4px 4px 20px rgba(0, 0, 0, 0.05);
+    display: grid;
+    grid-template-areas:
+        'image'
+        'title'
+        'price'
+        'weights'
+        'controls';
+    grid-row-gap: 2.5em;
+    margin: 0;
+    padding: 2em 2em 3em 2em;
+    transition: .3s ease;
 }
 
-    .card::after hover {
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        transform: scale(1.5);
-        cursor: pointer;
+    .card:hover {
+        transform: scale(1.05);
     }
 
-.card_white{
+.card_white {
     background-color: #fff;
 }
 
 .card_grey {
     background-color: #f9f9f9;
+    border: 1px solid #F2F2F2;
+}
+
+.card__image {
+    display: block;
+    grid-area: image;
+    position: relative;
+    border-radius: 10px;
+    padding-bottom: 54.5219638%;
+}
+
+.card_grey .card__image {
+    padding-bottom: 82.5454545%;
+}
+
+.card__image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    user-select: none;
+    border-radius: 10px;
+}
+
+.card__title {
+    font-size: 2.4em;
+    color: #000;
+    font-weight: 600;
+    grid-area: title;
+    transition: .4s ease;
+}
+
+    .card__title span {
+        font-size: 0.5833333em;
+        color: #828282;
+        display: block;
+        grid-area: remark;
+    }
+
+.cart__price {
+    grid-area: price;
+    margin: 0;
+    font-size: 2.2em;
+    font-weight: 700;
+    color: #333333;
+}
+
+.cart__weights {
+    grid-area: weights;
+}
+
+.card__controls {
+    grid-area: controls;
+    display: flex;
+    /*flex-wrap: wrap;*/
+    justify-content: space-between;
+    column-gap: 0.5em;
+    row-gap: 1em;
+}
+
+.card__link {
+    background-color: #3ecf5e;
+    text-decoration: none;
+    color: #fff;
+    padding: 0.5555555em 1.6666666em;
+    border-radius: 5px;
+    font-size: 1.8em;
+    border: 0.1em solid rgba(110, 230, 144, 0.53);
+    display: flex;
+    align-items: center;
+}
+
+.card__button {
+    border: 1px solid #bdbdbd;
+    flex: 0 0 4.5em;
+    height: 4.5em;
+    padding: 0.675em;
+    border-radius: 10px;
+    background: #fff;
+    align-self: end;
+}
+
+.card__button img{
+    width: 100%;
+    height: 100%;
+}
+
+.card__button:hover{
+    cursor: pointer;
 }
