--- a/BreakableEcology/Components/SectionTitle.razor
+++ b/BreakableEcology/Components/SectionTitle.razor
@@ -1,8 +1,10 @@
 ﻿<h2 class="section-title">
-    @ChildContent
+    <span>@ChildContent</span> <a href="@Href">Ещё</a>
 </h2>
 
 @code {
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
+    [Parameter]
+    public string Href { get; set; }
 }
