--- a/BreakableEcology/Pages/Index.razor
+++ b/BreakableEcology/Pages/Index.razor
@@ -2,4 +2,8 @@
 
 <PageTitle>Главная</PageTitle>
 
-<Section T="Card" Title="Каталог" />
+<div class="page">
+    <Section Title="Каталог" Items="AppData.CatalogCards" Href="/catalog"/>
+
+    <Section Title="Готовые миксы" Items="AppData.MixesCards" ProductsSection=true Href="/mixes"/>
+</div>
