--- a/BreakableEcology/Components/Header.razor.css
+++ b/BreakableEcology/Components/Header.razor.css
@@ -17,47 +17,63 @@
             'menu menu search search';
     }
 
-.header ::deep .logo{
-    grid-area: logo;
-}
-
-.header ::deep .telephone {
-    grid-area: telephone;
-    justify-self: end;
-}
-
-.header ::deep .account {
-    grid-area: account;
-    justify-self: end;
-}
-
-.header ::deep .menu {
-    grid-area: menu;
-}
-
-.header ::deep .search-form {
-    grid-area: search;
-}
-
-    @media only screen and (max-width: 48em) {
-        .header {
-        padding: 1em 0;
-        position: sticky;
+    .header ::deep .logo {
+        grid-area: logo;
     }
 
-        .header ::deep .container {
-            grid-column-gap: 3em;
-            grid-row-gap: 1em;
-            /*align-items: center;*/
-            grid-template-columns: 1fr 1fr;
-            grid-auto-rows: auto;
-            overflow-y: hidden;
-            grid-template-areas:
-                'logo burger';
+    .header ::deep .telephone {
+        grid-area: telephone;
+        justify-self: end;
+    }
+
+    .header ::deep .account {
+        grid-area: account;
+        justify-self: end;
+    }
+
+    .header ::deep .menu {
+        grid-area: menu;
+    }
+
+    .header ::deep .search-form {
+        grid-area: search;
+    }
+
+@media only screen and (max-width: 48em) {
+    .header {
+        padding: 1em 0;
+        position: sticky;
+        width: 100vw;
+        max-width: 100%;
+    }
+
+        .header::-webkit-scrollbar{
+            width: 0.8em;
+            transition: 1s;
         }
 
-        .header ::deep .menu{
-            justify-self: center;   
+        .header::-webkit-scrollbar-track {
+            background-color: #f9f9f9;
+        }
+
+        .header::-webkit-scrollbar-thumb {
+            background-color: seagreen;
+            border-radius: 15px;
+            border: 0.2em solid #f9f9f9;
+        }
+
+            .header ::deep .container {
+                grid-column-gap: 3em;
+                grid-row-gap: 1em;
+                grid-template-columns: 1fr 1fr;
+                grid-auto-rows: auto;
+                overflow-y: hidden;
+                grid-template-areas:
+                    'logo burger';
+            }
+
+        .header ::deep .menu {
+            justify-self: center;
         }
 
         .header ::deep .telephone {
@@ -74,14 +90,15 @@
         .header ::deep .search-form,
         .header ::deep .account {
             position: absolute;
-            top: -1000vh;
+            transform: scale(0);
+            transition: transform .3s ease;
+            opacity: 0;
         }
 
-            .header.active {
-                height: 100vh;
-                overflow-y: auto;
-                width: 100vw;
-            }
+        .header.active {
+            height: 100vh;
+            overflow-y: auto;
+        }
 
             .header.active ::deep .container {
                 grid-template-areas:
@@ -93,7 +110,7 @@
                 grid-row-gap: 4em;
             }
 
-            .header.active ::deep .menu{
+            .header.active ::deep .menu {
                 grid-area: menu;
             }
 
@@ -104,7 +121,7 @@
                 border-radius: 15px;
             }
 
-            .header.active ::deep .search-form{
+            .header.active ::deep .search-form {
                 grid-area: search;
             }
 
@@ -120,5 +137,7 @@
             .header.active ::deep .search-form,
             .header.active ::deep .account {
                 position: static;
+                transform: scale(1);
+                opacity: 1;
             }
 }
