--- a/BreakableEcology/Components/SectionTitle.razor.css
+++ b/BreakableEcology/Components/SectionTitle.razor.css
@@ -3,4 +3,11 @@
     font-weight: 500;
     color: #4F4F4F;
     margin: 0;
+    display: flex;
+    column-gap: 1.6666666em;
 }
+
+    .section-title a {
+        color: #219653;
+        text-decoration: none;
+    }
