--- a/BreakableEcology/wwwroot/css/app.css
+++ b/BreakableEcology/wwwroot/css/app.css
@@ -1,4 +1,8 @@
-﻿@font-face {
+﻿:root{
+    scroll-behavior: smooth;
+}
+
+@font-face {
     font-family: 'Gilroy';
     src: local('Gilroy Bold'), url('../fonts/Gilroy-Bold.woff2') format('woff2'), url('../fonts/Gilroy-Bold.woff') format('woff'), url('../fonts/Gilroy-Bold.ttf') format('ttf');
     font-weight: 700;
@@ -43,4 +47,24 @@ body {
     font-size: 62.5%;
     font-family: 'Gilroy', sans-serif;
     background: #f9f9f9;
+}
+
+    body::-webkit-scrollbar {
+        width: 0.8em;
+        transition: 1s;
+    }
+
+    body::-webkit-scrollbar-track {
+        background-color: #f9f9f9;
+    }
+
+    body::-webkit-scrollbar-thumb {
+        background-color: seagreen;
+        border-radius: 15px;
+        border: 0.2em solid #f9f9f9;
+    }
+
+.page{
+    display: grid;
+    grid-row-gap: 7.5em;
 }
