--- a/BreakableEcology/Pages/Index.razor
+++ b/BreakableEcology/Pages/Index.razor
@@ -5,5 +5,11 @@
 <div class="page">
     <Section Title="Каталог" Items="AppData.CatalogCards" Href="/catalog"/>
 
-    <Section Title="Готовые миксы" Items="AppData.MixesCards" ProductsSection=true Href="/mixes"/>
+    <Section Title="Готовые миксы" Items="AppData.MixesCards" Is4Section=true Href="/mixes"/>
+
+    <Section Title="Виды птиц" Href="/birds" Items="AppData.BirdSpeciesCards" Is4Section=true />
+
+    <Section Title="Зёрна" Href="/grains" Items="AppData.GrainsCards" Is4Section=true />
+
+    <Section Title="Кормушки" Href="/feeders" Items="AppData.FeedersCards" Is4Section=true />
 </div>
