--- a/BreakableEcology/Components/Card.razor.css
+++ b/BreakableEcology/Components/Card.razor.css
@@ -12,10 +12,11 @@
     margin: 0;
     padding: 2em 2em 3em 2em;
     transition: .3s ease;
+    position: relative;
 }
 
     .card:hover {
-        transform: scale(1.05);
+        transform: scale(1.04);
     }
 
 .card_white {
@@ -115,3 +116,44 @@
 .card__button:hover{
     cursor: pointer;
 }
+
+.card__discount {
+    position: absolute;
+    top: 1.2em;
+    right: 1.2em;
+    border: 1px solid #3FCF5E;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px rgba(110, 230, 144, 0.53);
+    padding: 0.71429em 1.14285em;
+    background: #fff;
+    font-size: 1.4em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 15.5%;
+}
+
+.card__radio{
+    display: flex;
+    row-gap: 0.5em;
+}
+
+.card__weight-label {
+    position: relative;
+    cursor: pointer;
+    font-size: 1.8em;
+    font-weight: 500;
+    padding: 0.1em 0.5em;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+    .card__weight-label.checked {
+        outline: 1px solid #3ECF5E;
+    }
+
+    .card__weight-label ::deep input {
+        position: absolute;
+        opacity: 0;
+        visibility: hidden;
+    }
