--- a/BreakableEcology/App.razor
+++ b/BreakableEcology/App.razor
@@ -6,7 +6,7 @@
     <NotFound>
         <PageTitle>Не найдено</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Извините, по этому адресу ничего нет.</p>
+            <p role="alert" class="nothing">Извините, по этому адресу ничего нет.</p>
         </LayoutView>
     </NotFound>
 </Router>
