--- a/BreakableEcology/Pages/Index.razor
+++ b/BreakableEcology/Pages/Index.razor
@@ -3,13 +3,13 @@
 <PageTitle>Главная</PageTitle>
 
 <div class="page">
-    <Section Title="Каталог" Items="AppData.CatalogCards" Href="/catalog"/>
+    <Section Title="Каталог" Items="AppData.CatalogCards" Href="/catalog" ShowMore=true/>
 
-    <Section Title="Готовые миксы" Items="AppData.MixesCards" Is4Section=true Href="/mixes"/>
+    <Section Title="Готовые миксы" Items="AppData.MixesCards" Is4Section=true Href="catalog/mixes" ShowMore=true />
 
-    <Section Title="Виды птиц" Href="/birds" Items="AppData.BirdSpeciesCards" Is4Section=true />
+    <Section Title="Виды птиц" Href="catalog/birds" Items="AppData.BirdSpeciesCards" Is4Section=true ShowMore=true />
 
-    <Section Title="Зёрна" Href="/grains" Items="AppData.GrainsCards" Is4Section=true />
+    <Section Title="Зёрна" Href="catalog/grains" Items="AppData.GrainsCards" Is4Section=true ShowMore=true />
 
-    <Section Title="Кормушки" Href="/feeders" Items="AppData.FeedersCards" Is4Section=true />
+    <Section Title="Кормушки" Href="/catalog/feeders" Items="AppData.FeedersCards" Is4Section=true ShowMore=true/>
 </div>
