--- a/BreakableEcology/Shared/MainLayout.razor
+++ b/BreakableEcology/Shared/MainLayout.razor
@@ -1,11 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
 <Header />
-
+<Container>
+    <Quantity />
+</Container>
 <main class="main">
     <article class="main__content">
         @Body
     </article>
 </main>
+
+<OnTop ElementID="header" Image="images/icons/on_top.svg"/>
 
 <Footer />
