--- a/BreakableEcology/Components/Card.razor
+++ b/BreakableEcology/Components/Card.razor
@@ -16,7 +16,9 @@
 
         @if (Item.Price is not null)
         {
-            <p class="cart__price">@Item.Price руб.</p>
+            <p class="cart__price">
+                @Item.Price руб.
+            </p>
         }
 
         @if (Item.ShowWeights)
@@ -24,10 +26,10 @@
             <EditForm Model="product">
                 <InputRadioGroup @bind-Value="product.Weight">
                     <div class="card__radio">
-                        <label class=@((product.Weight == 200) ? "card__weight-label checked" : "card__weight-label")><InputRadio TValue="int" Value="200" />200 г</label>
-                        <label class=@((product.Weight == 400) ? "card__weight-label checked" : "card__weight-label")><InputRadio TValue="int" Value="400" />400 г</label>
-                        <label class=@((product.Weight == 800) ? "card__weight-label checked" : "card__weight-label")><InputRadio TValue="int" Value="800" />800 г</label>
-                        <label class=@((product.Weight == 1000) ? "card__weight-label checked" : "card__weight-label")><InputRadio TValue="int" Value="1000" />1 кг</label>
+                        <label class=@((product.Weight == 200) ? "card__weight-label checked" : "card__weight-label") ><InputRadio TValue="int" Value="200" aria-hidden="true" />200 г</label>
+                        <label class=@((product.Weight == 400) ? "card__weight-label checked" : "card__weight-label") ><InputRadio TValue=" int" Value="400" aria-hidden="true" />400 г</label>
+                        <label class=@((product.Weight == 800) ? "card__weight-label checked" : "card__weight-label") ><InputRadio TValue="int" Value="800" aria-hidden="true" />800 г</label>
+                        <label class=@((product.Weight == 1000) ? "card__weight-label checked" : "card__weight-label") ><InputRadio TValue="int" Value="1000" aria-hidden="true" />1 кг</label>
                     </div>
                 </InputRadioGroup>
             </EditForm>
@@ -65,7 +67,6 @@
                 {
                     Price = Item.Price,
                     Name = Item.Title,
-                    Id = Guid.NewGuid().GetHashCode(),
                     Weight = 200
                 };
         }
